server.log
  File "/Users/george/Documents/GitHub/candlestick-screener/app.py", line 321
    scanner_dict = {}
                     ^
IndentationError: unindent does not match any outer indentation level
